--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-static": "^1.2.6",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
